changed name on report views (ts and non-ts) from Under-Five to Paediatric

--- a/bhoma/apps/reports/templates/reports/report_list.html
+++ b/bhoma/apps/reports/templates/reports/report_list.html
@@ -15,7 +15,7 @@
     <ul>
         <li><a href="{% url adult_pi %}">Adult PI Report</a></li>
         <li><a href="{% url pregnancy_pi %}">Pregnancy PI Report</a></li>
-        <li><a href="{% url under_five_pi %}">Under-Five PI Report</a></li>
+        <li><a href="{% url under_five_pi %}">Paediatric PI Report</a></li>
         <li><a href="{% url chw_pi %}">CHW PI Report</a></li>
     </ul>
 </div>
