--- a/bhoma/apps/reports/templates/reports/report_list_ts.html
+++ b/bhoma/apps/reports/templates/reports/report_list_ts.html
@@ -23,7 +23,7 @@ Report List
 	    {% url clinic_report "pregnancy_pi" as pr_url %}
 	    {% ts_button "Pregnancy PI Report" pr_url "big-button shiny-button" "font-size:x-large"%}
 	    {% url clinic_report "under_five_pi" as uf_url %}
-	    {% ts_button "Under-Five PI Report" uf_url "big-button shiny-button" "font-size:x-large"%}
+	    {% ts_button "Paediatric PI Report" uf_url "big-button shiny-button" "font-size:x-large"%}
 	    {% url clinic_report "chw_pi" as chw_url %}
 	    {% ts_button "CHW PI Report" chw_url "big-button shiny-button" "font-size:x-large"%}
 {% else %}
