--- a/bhoma/apps/patient/templates/patient/partials/single_patient_summary.html
+++ b/bhoma/apps/patient/templates/patient/partials/single_patient_summary.html
@@ -3,7 +3,7 @@
   <table border="0" style="width: 100%; border: 3px solid black; padding: 10px; background-color: white;">
     <tr><td class="prompt" width="20%">Sex:&nbsp;&nbsp;</td><td width="80%"><strong>{% if patient.gender %}{% ifequal patient.gender 'm' %}Male{% else %}Female{% endifequal %}{% else %}??{% endif %}</strong></td></tr>
     <tr><td class="prompt">Birthdate:&nbsp;&nbsp;</td><td><strong>{{ patient.birthdate|date:"d M Y"|default:"??" }} {% if patient.birthdate_estimated %}(est){% endif %}</strong></td></tr>
-    <tr><td class="prompt">Age:&nbsp;&nbsp;</td><td>{% if patient.is_deceased %}<span class="important">DECEASED</span>{% else %}<strong>{{ patient.formatted_age|default:"??" }}</strong>{% endif %}</td></tr>
+    <tr><td class="prompt">Age:&nbsp;&nbsp;</td><td>{% if patient.is_deceased %}<span class="important">DECEASED</span>{% else %}<strong>{{ patient.formatted_age|default:"??" }} {% if patient.mother_linked %}&nbsp;<span style="color: blue; font-size: 70%;">(mother is linked)</span>{% endif %}</strong>{% endif %}</td></tr>
     <tr><td class="prompt">Village:&nbsp;&nbsp;</td><td><strong>{{ patient.address.village|default:"&#x2014;" }} 
                                                 {% if patient.address.zone %}(zone {{ patient.address.zone }})
                                                 {% else %}{% if patient.address.zone_empty_reason %}
