--- a/bhoma/apps/patient/templates/patient/partials/encounter_choice_list.html
+++ b/bhoma/apps/patient/templates/patient/partials/encounter_choice_list.html
@@ -7,7 +7,7 @@
         {% url new_patient_encounter patient.get_id slug as encounter_url %}
         {% ts_button type.name encounter_url "big-button shiny-button" %}
 	{% else %}
-	   {% ts_button type.name "javascript:alert(\\'Sorry, the age or gender of this patient does not allow for that type of visit!\\');" "big-button-disabled" %}
+	   {% ts_button type.name "javascript:alert(\\'Sorry, the age or gender of this patient does not allow for that type of visit! Or, the patient is deceased.\\');" "big-button-disabled" %}
 	{% endif %}
 {% endfor %}
 </center>
