attempt to fix overrunning font size on report list

--- a/bhoma/apps/reports/templates/reports/report_list_ts.html
+++ b/bhoma/apps/reports/templates/reports/report_list_ts.html
@@ -11,7 +11,7 @@ Report List
 		{% url clinic_report "clinic_summary_report" as sum_url %}
 	    {% ts_button "Clinic Summary Report" sum_url "big-button shiny-button" "font-size:x-large"%}
 	    {% url clinic_report "user_summary_report" as user_url %}
-        {% ts_button "User/CHW Summary Report" user_url "big-button shiny-button" "font-size:x-large"%}
+        {% ts_button "User/CHW Summary Report" user_url "big-button shiny-button" "font-size:170%"%}
 		{% url clinic_report "chw_summary_report" as chw_url %}
 		{% ts_button "Single CHW Report" chw_url "big-button shiny-button" "font-size:x-large"%}
 	</div>
