--- a/bhoma/apps/reports/templates/reports/chw_pi.html
+++ b/bhoma/apps/reports/templates/reports/chw_pi.html
@@ -5,5 +5,6 @@
 {% include "reports/partials/chw_and_date_selector.html" %}
 {% if main_chw %}
     {% render_report report %}
+    {% render_summary_graph report %}
 {% endif %}
 {% endblock %}
