add workaround for export so we don't have to bump the major version number
the export tag will be added at the time of export.
this might make export slow for patients

--- a/bhoma/apps/patient/templates/patient/export_data.html
+++ b/bhoma/apps/patient/templates/patient/export_data.html
@@ -13,7 +13,7 @@
 <strong>Clinic Forms</strong>
 <ul>
     <li style="padding-top:10px">
-        <a href="{% url model_download_excel %}?export_tag=CPatient">patient (registration and case) data</a>
+        <a href="{% url patient_excel %}">patient (registration and case) data</a>
     </li>
 {% for slug, encounter_info in clinic_encounters.items %}
     <li style="padding-top:10px">
