remove the "add chw" button when not viewing centrally

--- a/bhoma/apps/chw/templates/chw/chw_list.html
+++ b/bhoma/apps/chw/templates/chw/chw_list.html
@@ -15,7 +15,7 @@
 {% endblock %}
 {% block content %}
 <h3>Community Health Workers</h3>
-<p><a href="{% url new_chw %}">Add a CHW</a></p>
+{% if clinic.is_central %}<p><a href="{% url new_chw %}">Add a CHW</a></p>{% endif %}
 <table class="datatable">
     <thead>
         <tr>
