--- a/bhoma/apps/reports/templates/reports/report_list_ts.html
+++ b/bhoma/apps/reports/templates/reports/report_list_ts.html
@@ -10,10 +10,12 @@ Report List
 		<h2>Clinic Management</h2>
 		{% url clinic_report "clinic_summary_report" as sum_url %}
 	    {% ts_button "Clinic Summary Report" sum_url "big-button shiny-button" "font-size:x-large"%}
+{% if perms.webapp.bhoma_view_pi_reports %}
 	    {% url clinic_report "user_summary_report" as user_url %}
         {% ts_button "User/CHW Summary Report" user_url "big-button shiny-button" "font-size:170%"%}
 		{% url clinic_report "chw_summary_report" as chw_url %}
 		{% ts_button "Single CHW Report" chw_url "big-button shiny-button" "font-size:x-large"%}
+{% endif %}
 	</div>
 	<div class="span-12 last">
 	    <h2>Performance Indicator Reports</h2>
