rephrase shutdown message

--- a/bhoma/apps/webapp/templates/touchscreen/shutdown.html
+++ b/bhoma/apps/webapp/templates/touchscreen/shutdown.html
@@ -69,7 +69,7 @@ $(document).ready(init);
 
 <div style="width: 100%; text-align: center; color: blue; display: none" id="off">
 <p style="padding-top: 150px;">The system is off.</p>
-<p style="padding-top: 60px;">You may now disconnect the power.</p>
+<p style="padding-top: 60px;">You may now turn off the touchscreen. When the green light is off, disconnect power to the BHOMA data system.</p>
 </div>
 
 
