refine new shutdown prompt

--- a/bhoma/apps/webapp/templates/touchscreen/shutdown.html
+++ b/bhoma/apps/webapp/templates/touchscreen/shutdown.html
@@ -63,13 +63,13 @@ $(document).ready(init);
 
 <div style="width: 100%; text-align: center; color: green; display: none" id="shutting-down">
 <p style="padding-top: 60px;">The system is now shutting down...</p>
-<img src="{{ MEDIA_URL }}formplayer/img/loading.png">
+<img src="{{ STATIC_URL }}formplayer/img/loading.png">
 <p style="padding-top: 60px;">Do not turn off the power yet.</p>
 </div>
 
 <div style="width: 100%; text-align: center; color: blue; display: none" id="off">
 <p style="padding-top: 150px;">The system is off.</p>
-<p style="padding-top: 60px;">You may now turn off the touchscreen. When the green light is off, disconnect power to the BHOMA data system.</p>
+<p style="padding-top: 60px; padding-left: 40px; padding-right: 40px;">You may now turn off the touchscreen.<br>When the green light is off, disconnect power to the BHOMA data system.</p>
 </div>
 
 
