usrs, attempt to add async download

--- a/bhoma/apps/patient/templates/patient/export_data.html
+++ b/bhoma/apps/patient/templates/patient/export_data.html
@@ -17,7 +17,7 @@
     </li>
 {% for slug, encounter_info in clinic_encounters.items %}
     <li style="padding-top:10px">
-        <a href="{% url model_download_excel %}?export_tag={{encounter_info.namespace}}&filename={{ encounter_info.name }}">{{ encounter_info.name }}</a>
+        <a href="{% url export_data_async %}?export_tag={{encounter_info.namespace}}&filename={{ encounter_info.name }}">{{ encounter_info.name }}</a>
     </li>
 {% endfor %}
 </ul>
@@ -29,7 +29,7 @@
 <ul>
 {% for slug, encounter_info in chw_encounters.items %}
     <li style="padding-top:10px">
-        <a href="{% url model_download_excel %}?export_tag={{encounter_info.namespace}}&filename={{ encounter_info.name }}">{{ encounter_info.name }}</a>
+        <a href="{% url export_data_async %}?export_tag={{encounter_info.namespace}}&filename={{ encounter_info.name }}">{{ encounter_info.name }}</a>
     </li>
 {% endfor %}
 </ul>
@@ -40,7 +40,7 @@
 <strong>Aggregates</strong>
 <ul>
     <li style="padding-top:10px">
-        <a href="{% url model_download_excel %}?export_tag=http://cidrz.org/bhoma/mortality_register&filename=Mortality Register">Mortality Register Data</a>
+        <a href="{% url export_data_async %}?export_tag=http://cidrz.org/bhoma/mortality_register&filename=Mortality Register">Mortality Register Data</a>
     </li>
 </ul>
 </div>
