add updated logo, footer

--- a/bhoma/apps/webapp/static/webapp/stylesheets/bhoma.css
+++ b/bhoma/apps/webapp/static/webapp/stylesheets/bhoma.css
@@ -3,7 +3,7 @@
 }
 
 #header .container h1 {
-    background: url("../images/logo_cidrz.gif")  no-repeat; 
+    background: url("../images/cidrz_logo.png")  no-repeat; 
     min-height: 56px;
     margin: 5px;
     text-indent:-9999px;
