--- a/bhoma/apps/webapp/templates/footer.html
+++ b/bhoma/apps/webapp/templates/footer.html
@@ -1,11 +1,11 @@
 <div id="footer">
     <div class="container">
-        <div class="span-12">
+        <div class="span-8">
             &nbsp;
         </div>
-        <div class="span-12 last">
+        <div class="span-16 last">
             <p style="text-align:right">
-                <strong>BHOMA</strong>&nbsp;&nbsp;Better Health Outcomes for Zambia | Copyright &copy; 2011 <strong>CIDRZ</strong>
+                <strong>BHOMA</strong>&nbsp;&nbsp;BHOMA - Better Health Outcomes through Mentoring and Assessment | Copyright &copy; 2011 <strong>CIDRZ</strong>
             </p>
         </div>
     </div><!-- End Container Class -->
