--- a/bhoma/apps/reports/templates/reports/pi_report.html
+++ b/bhoma/apps/reports/templates/reports/pi_report.html
@@ -1,5 +1,6 @@
 {% extends "reports/report_base.html" %}
 {% block reportcontent %}
+{% include "reports/partials/clinic_and_date_selector.html" %}
 {% load report_tags %}
 {% render_report report %}
 {% render_summary_graph report %}
