add the first draft of the chw dashboard report.

--- a/bhoma/apps/reports/templates/reports/report_list.html
+++ b/bhoma/apps/reports/templates/reports/report_list.html
@@ -23,6 +23,7 @@
 <div class="span-12">
     <h2>Workforce management</h2>
     <ul>
+        <li><a href="{% url chw_dashboard_report %}">CHW Dashboard</a></li>
         <li><a href="{% url user_summary_report %}">User/CHW summary</a></li>
         <li><a href="{% url chw_summary_report %}">Single CHW report</a></li>
         <li><a href="{% url punchcard_report %}">Punchcard report</a></li>
