fix widths again

--- a/bhoma/apps/reports/templates/reports/chw_dashboard.html
+++ b/bhoma/apps/reports/templates/reports/chw_dashboard.html
@@ -35,13 +35,13 @@ table colgroup.lastsync {
   width:200px;
 }
 table colgroup.followups {
-  width:200px;
+  width:180;
 }
 table colgroup.visits {
   width:220px;
 }
 table colgroup.referrals {
-  width:200px;
+  width:220px;
 }
 </style>
 
