dumb width fix 3

--- a/bhoma/apps/reports/templates/reports/chw_dashboard.html
+++ b/bhoma/apps/reports/templates/reports/chw_dashboard.html
@@ -35,7 +35,7 @@ table colgroup.lastsync {
   width:200px;
 }
 table colgroup.followups {
-  width:180;
+  width:180px;
 }
 table colgroup.visits {
   width:220px;
