--- a/bhoma/apps/reports/templates/reports/chw_dashboard.html
+++ b/bhoma/apps/reports/templates/reports/chw_dashboard.html
@@ -82,7 +82,7 @@ table colgroup.referrals {
         {% else %}Never{% endif %}
     </td>
     <td class="{{chw.overdue_fus_status}}">Outstanding follow ups:&nbsp;&nbsp;<strong>{{ chw.overdue_fus }}</strong></td>
-    <td class="{{chw.hh_visits.status}}">Visits performed last 30 days:&nbsp;&nbsp;
+    <td class="{{chw.hh_visits.status}}">Visits last 30 days:&nbsp;&nbsp;
         <strong>{{ chw.hh_visits.percent|floatformat|default:"?" }} %</strong> 
         ({{ chw.hh_visits.count }}/{{ chw.hh_visits.households}})</td>
     <td class="{{chw.ref_visits_status}}">Referrals made last 30 days:&nbsp;&nbsp;<strong>{{ chw.ref_visits }}</strong></td>
