clean table format

--- a/bhoma/apps/reports/templates/reports/disease_details.html
+++ b/bhoma/apps/reports/templates/reports/disease_details.html
@@ -7,6 +7,9 @@
         #ui-datepicker-div {
             display: none;    /* hack */
         }
+        table {
+            width: 17%;
+        }
     </style>
 {% endblock %}
 {% block reportcontent %}
